--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "axios": "^1.5.1",
     "express": "^4.18.2",
     "https": "^1.0.0",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.1"
   }
 }
